--- a/streamdeck-obstools/PropertyInspector/TwitchSetup/css/main.css
+++ b/streamdeck-obstools/PropertyInspector/TwitchSetup/css/main.css
@@ -1,8 +1,20 @@
+@import 'https://fonts.googleapis.com/css?family=Quantico';
+@import 'https://fonts.googleapis.com/css?family=Roboto';
+
+:root {
+    --br-button-color: #6441a5;
+    --br-hover-color: #772CE8;
+    --br-button-font-color: #FFFFFF;
+    --br-status-bar-active-color: #772CE8;
+    --br-status-bar-completed-color: #6441a5;
+    --br-status-bar-count: 3;
+}
+
 html, body {
     margin: 0px;
     color: rgb(230, 230, 230);
-    background-color: rgb(41,41,41);
-    font-family: 'Helvetica Light', 'Helvetica', Arial, sans-serif;
+    background-color: #121212;
+    font-family: 'Roboto', 'Helvetica Light', 'Helvetica', Arial, sans-serif;
     height: 100%;
     -webkit-user-select: none;
     user-select: none;
@@ -16,6 +28,9 @@ h1, h2 {
 h1 {
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 34px;
+    font-weight: normal;
+    line-height: 40px;
 }
 
 h2 {
@@ -25,41 +40,39 @@ h2 {
 }
 
 .header {
-    padding: 25px;
     padding-bottom: 5px;
 }
 
 #content {
-    padding: 25px;
-    padding-top: 0px;
-    padding-bottom: 15px;
+    padding: 0px 25px 15px 25px;
+    margin-top: 0px;
 }
 
 .main {
-    min-width: 400px;
+    min-width: 620px;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 620px) {
     .main {
-        max-width: 500px;
+        max-width: 620px;
         height: 100%;
         width: 100%;
         display: table;
         margin-left: auto;
         margin-right: auto;
     }
+
     .center {
         display: table-cell;
         height: 100%;
         vertical-align: middle;
     }
+}
 
-    .border {
-        border: 1px solid rgb(60,60,60);
-        border-radius: 5px;
-        margin: 10px;
-        min-height: 625px;
-    }
+.content-wrapper {
+    padding-left: 50px;
+    padding-right: 50px;
+    text-align: center;
 }
 
 p, li {
@@ -67,97 +80,31 @@ p, li {
     text-align: center;
 }
 
-.status-bar {
-    display: table;
-    width: 100%;
-    border-spacing: 3px;
-    border-collapse: separate;
-}
-
-.status-row {
-    display: table-row;
-}
-
-.status-cell {
-    display: table-cell;
-    background-color: rgb(61, 61, 61);
-    height: 10px;
-}
-
-.status-cell.active {
-    background-color: rgb(0, 125, 255);
-}
-
-.image {
-    width: 250px;
-    height: auto;
+.image150 {
+    width: auto;
+    height: 150px;
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding-top: 5px;
 }
 
-.button, .button-transparent {
-    padding: 8px 50px;
-    display: table;
-    margin: 8px auto;
-    cursor: pointer;
+.margin-top0 {
+    margin-top: 0px !important;
 }
 
-.button {
-    background-color: rgb(61, 61, 61);
-    border-radius: 4px;
-}
-
-.button:hover {
-    background-color: rgb(0, 125, 255);
-}
-
-.button-transparent:hover {
-    color: rgb(150, 150, 150);
+.marginLeft0 {
+    margin-left: 0px !important;
 }
 
 .hide {
     display: none;
 }
 
-#loader {
-    width: 40px;
-    height: 40px;
-    background-color: rgb(102, 102, 102);
-    margin: 20px auto;
-    -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-    animation: sk-rotateplane 1.2s infinite ease-in-out;
-}
-@-webkit-keyframes sk-rotateplane {
-    0% { -webkit-transform: perspective(120px) }
-    50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-    100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
-}
-@keyframes sk-rotateplane {
-    0% {
-        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
-    } 50% {
-        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
-    } 100% {
-        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-    }
-}
-
 .linkspan {
     cursor: pointer;
     color: #7397d2;
     text-decoration: underline;
-}
-
-.inputTitle {
-    padding-top: 5px;
-    font-weight: bold;
-    float: left;
-    margin-right: 5px;
 }
 
 .leftAlign {
@@ -168,14 +115,320 @@ p, li {
     font-size: 13px;
 }
 
-.approvalCode {
+.error {
+    color: #FF0000;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.nextStep {
+    font-weight: bold;
+    font-size: 14px;
+    font-style: italic;
+    text-align: center;
+    line-height: 21px;
+}
+
+/* <-- End Global Classes -->*/
+
+
+/* Icon Bar */
+
+.icon-bar {
+    display: table;
+    width: 100%;
+    height: 160px;
+    border-spacing: 3px;
+    border-collapse: separate;
+    background-color: #282828;
+}
+
+.app-logo {
+    height: 107px;
+    width: 107px;
+    position: absolute;
+    top: 26px;
+    left: 172px;
+    background-image: url("../images/appLogo.png");
+}
+
+.br-logo {
+    height: 107px;
+    width: 107px;
+    position: absolute;
+    top: 26px;
+    right: 172px;
+    background-image: url("../images/brLogo.png");
+}
+
+.ellipseStart, .ellipseFail {
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 107px;
+    width: 150px;
+    z-index: 1;
+}
+
+.ellipseStart {
+    background-image: url("../images/ellipse.svg");
+}
+
+.ellipseFail {
+    background-image: url("../images/ellipseFail.svg");
+}
+
+.ellipseTopLeft {
+    top: -9px;
+    left: 138px;
+    transform-origin: center;
+    transform: rotate(3deg);
+}
+
+.ellipseBottomRight {
+    top: 60px;
+    right: 138px;
+    transform-origin: center;
+    transform: rotate(183deg);
+}
+
+.borderDone {
+    border: 10px solid #1652FF;
+    border-radius: 107px;
+}
+
+.borderLink {
+    position: absolute;
+    border-bottom: 10px dotted #1652FF;
+    width: 10px;
+    bottom: 0;
+    height: 10px;
+    top: 70px;
+    left: 303px;
+}
+
+.success {
+    color: #1ED760;
+}
+
+/*<-- End Icon Bar -->*/
+
+/* Status Bar */
+
+.status-bar {
+    display: table;
+    width: 100%;
+    border-spacing: 3px;
+    border-collapse: separate;
+    padding: 10px 0px 47px 0px;
+}
+
+.status-row, .title-row {
+    display: table-row;
+}
+
+.title-cell {
+    display: table-cell;
+    font-weight: 700;
+    font-size: 20px;
+    height: 28px;
+    color: #7F7F7F;
+    text-align: center;
+    line-height: 44px;
+}
+
+    .title-cell.active {
+        color: white;
+    }
+
+.status-cell {
+    display: table-cell;
     background-color: rgb(61, 61, 61);
+    height: 10px;
+    width: calc(100% / var(--br-status-bar-count));
+}
+
+    .status-cell.active {
+        background-color: var(--br-status-bar-active-color);
+    }
+
+    .status-cell.completed {
+        background-color: var(--br-status-bar-completed-color);
+    }
+/*<-- End Status Bar -->*/
+
+/* Buttons */
+
+.button, .button-transparent {
+    display: table;
+    margin: 8px auto;
+    cursor: pointer;
+}
+
+.button {
+    border-radius: 60px;
+    background-color: var(--br-button-color);
+    color: var(--br-button-font-color);
+    height: 76px;
+    width: 300px;
+    font-size: 30px;
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 27px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: 0.115em;
+}
+
+    .button:hover {
+        background-color: var(--br-hover-color);
+    }
+
+.button-transparent {
+    color: #7F7F7F;
+}
+
+    .button-transparent:hover {
+        color: rgb(150, 150, 150);
+    }
+
+
+.button.twitter, .button.discord {
+    display: inline-flex;
+    margin-left: 30px;
+    height: 59px;
+    width: 232px;
+}
+
+    .button.twitter > img, .button.discord > img {
+        margin-right: 10px;
+    }
+
+.button.twitter {
+    background-color: #00ACEE;
+}
+
+.button.discord {
+    background-color: #7289DA;
+}
+
+/*<-- End Buttons -->*/
+
+/*Text Boxes*/
+#controls > input[type=textarea] {
+    text-align: left;
+}
+
+.textbox {
+    background: #FFFFFF;
+    border-radius: 8px;
     border-block-end-style: none;
     border-block-start-width: 0px;
     border-inline-end-style: none;
     border-inline-start-width: 0px;
-    caret-color: rgb(216, 216, 216);
-    color: rgb(216, 216, 216);
-    height: 30px;
-    width: 70%;
+    caret-color: #000000;
+    color: #000000;
+    height: 35px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    width: 90%;
 }
+
+::-webkit-input-placeholder {
+    font-weight: 900 !important;
+}
+
+::-moz-placeholder {
+    font-weight: 900 !important;
+}
+/* firefox 19+ */
+:-ms-input-placeholder {
+    font-weight: 900 !important;
+}
+/* ie */
+input:-moz-placeholder {
+    font-weight: 900 !important;
+}
+/*<-- End Text Boxes -->*/
+
+#loader {
+    width: 40px;
+    height: 40px;
+    background-color: var(--br-button-color);
+    margin: 20px auto;
+    -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+    animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+    0% {
+        -webkit-transform: perspective(120px)
+    }
+
+    50% {
+        -webkit-transform: perspective(120px) rotateY(180deg)
+    }
+
+    100% {
+        -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg)
+    }
+}
+
+@keyframes sk-rotateplane {
+    0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+    }
+
+    50% {
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+    }
+
+    100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    }
+}
+/*<-- End Loading Animation -->*/
+
+/* BarRaider final box*/
+#bar-box {
+    border-spacing: 3px;
+    border-collapse: separate;
+    background-color: #282828;
+    padding: 10px 0px 15px 0px;
+    margin: 0px 36px 0px 36px;
+}
+
+#bar-box-title {
+    margin-bottom: 0px;
+}
+
+.bar-box-font {
+    font-family: Roboto;
+}
+
+.bar-logo {
+    height: 75px;
+    margin-top: 0px;
+    background-position: center;
+    background-image: url("../images/brLogoSmall.png");
+    background-repeat: no-repeat;
+    background-position-x: 140px;
+    color: white;
+    padding-left: 70px;
+    font-family: Quantico;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 70px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+/*<-- End BarRaider Final Box -->*/
